changed dark and light theme colors

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -4,13 +4,13 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: #f5f5f5;
     --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
 
-    --popover: 0 0% 100%;
+    --popover: white;
     --popover-foreground: 222.2 84% 4.9%;
 
     --primary: 222.2 47.4% 11.2%;
@@ -36,13 +36,13 @@
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: #121212;
     --foreground: 210 40% 98%;
 
-    --card: 222.2 84% 4.9%;
+    --card: #121212;
     --card-foreground: 210 40% 98%;
 
-    --popover: 222.2 84% 4.9%;
+    --popover: #121212;
     --popover-foreground: 210 40% 98%;
 
     --primary: 210 40% 98%;
